public/core/v0.3/_sources/reference/tmlt/core/utils/type_utils/index.rst.txt



*****************
type_utils
*****************

.. py:module:: tmlt.core.utils.type_utils

.. autoapi-nested-parse::

   Helpers for type introspection and type-checking.











Functions
=========

.. list-table::

   * - :func:`.assert_never`
     - Assertion for statically checking exhaustive pattern matches.
   * - :func:`.get_element_type`
     - Return the Python type of the non-``None`` elements of a list.

.. py:function:: assert_never(x)

   Assertion for statically checking exhaustive pattern matches.

   From https://github.com/python/mypy/issues/5818.



.. py:function:: get_element_type(l, allow_none = True)

   Return the Python type of the non-``None`` elements of a list.

   If the given list is empty or contains elements with multiple types, raises
   ValueError.

   If ``allow_none`` is true (the default), ``None`` values in the list are
   ignored; if the list contains only ``None`` values, ``NoneType`` is
   returned.  If ``allow_none`` is false, raises ValueError if any element of
   the list is ``None``.







